Infrastructure for testing.